# cluster_compilot

./: .dockerignore  .gitignore  Dockerfile  README.md  baselines.py  bench.py  check_py315.py  eval.py  evaluate.py  pyproject.toml  requirements.txt  run_agent.py
.github/workflows/: docker-publish.yml  tests.yml
compilot/: __init__.py  agent.py  backend_isl.py  codegen.py  feedback.py  imperfect.py  kernels.py  llm.py  mcp_server.py  multikernel.py  polyhedral.py  polyhedral_multi.py  prompt.py  runner.py  schedule.py  scheduler.py  secrets.py  stencil.py  tui.py
compilot/backends/: tiramisu.py
docs/: README.md  architecture.md  building.md  how-it-works.md  parallelism.md  test-results.md  user-guide.md
npm/: README.md  package.json
tests/: test_distmatrix.py  test_environment.py  test_fusion.py  test_imperfect.py  test_legality.py  test_mcp.py  test_moa.py  test_montecarlo.py  test_multikernel.py  test_multistatement.py  test_parallel_safety.py  test_polybench.py  test_review_fixes.py  test_stencil.py  test_tiramisu_parity.py  test_tui.py
