[project]
name = "compilot"
version = "0.1.0"
description = "Agentic auto-scheduling: polyhedral legality (ISL) + LLM loop transforms"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "islpy>=2026.1",   # ISL polyhedral legality engine (same library Tiramisu wraps)
    "certifi",         # CA bundle for HTTPS on macOS python.org builds
]

[tool.setuptools]
packages = ["compilot"]
