[project]
name = "compilot"
version = "0.1.0"
description = "Agentic auto-scheduling: polyhedral legality (ISL) + LLM loop transforms"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "islpy>=2026.1",   # ISL polyhedral legality engine (same library Tiramisu wraps)
    "certifi",         # CA bundle for HTTPS on macOS python.org builds
]

[project.scripts]
compilot-mcp = "compilot.mcp_server:main"   # MCP server (Claude Code / Codex)
compilot-tui = "compilot.tui:run"           # live TUI monitor

[tool.setuptools]
packages = ["compilot"]
