[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "compilot"
version = "0.2.0"
description = "Agentic auto-scheduling: polyhedral legality (ISL) + LLM loop transforms"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["polyhedral", "compiler", "loop-optimization", "isl", "openmp", "mcp", "llm", "polybench"]
dependencies = [
    "islpy>=2026.1",   # ISL polyhedral legality engine (same library Tiramisu wraps)
    "certifi",         # CA bundle for HTTPS on macOS python.org builds
]

[project.urls]
Homepage = "https://github.com/cluster2600/cluster_compilot"
Repository = "https://github.com/cluster2600/cluster_compilot"

[project.scripts]
compilot-mcp = "compilot.mcp_server:main"   # MCP server (Claude Code / Codex)
compilot-tui = "compilot.tui:run"           # live TUI monitor

[tool.setuptools]
packages = ["compilot"]
